# logthing

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  IMPLEMENTATION.md  IPFIX_IMPLEMENTATION.md  PARSER_IMPLEMENTATION.md  README.md  SYSLOG_IMPLEMENTATION.md  ZEEK_IMPLEMENTATION.md  docker-compose.yml  logthing.admin.toml  logthing.toml  test_parser.sh  wef-server.toml
.github/workflows/: binaries.yml  release.yml  rust.yml
.superpowers/: phase1-report.md  phase4-report.md
config/: event_parsers.yaml
config/event_parsers/: 4624_successful_logon.yaml  4625_failed_logon.yaml  4634_logoff.yaml  4647_user_initiated_logoff.yaml  4648_logon_using_explicit_credentials.yaml  4649_replay_attack_detected.yaml  4656_handle_requested.yaml  4657_registry_value_changed.yaml  4658_handle_closed.yaml  4660_object_deleted.yaml  4661_handle_requested_for_object.yaml  4662_operation_performed_on_object.yaml  4663_attempted_object_access.yaml  4670_permissions_on_object_changed.yaml  4672_admin_logon.yaml  4673_privileged_service_called.yaml  4674_privileged_service_operation.yaml  4688_process_created.yaml  4689_process_terminated.yaml  4697_service_installed.yaml  4698_scheduled_task_created.yaml  4699_scheduled_task_deleted.yaml  4700_scheduled_task_enabled.yaml  4702_scheduled_task_updated.yaml  4719_system_audit_policy_changed.yaml  4720_user_account_created.yaml  4722_user_account_enabled.yaml  4723_password_change_attempt.yaml  4724_password_reset_attempt.yaml  4725_user_account_disabled.yaml  4726_user_account_deleted.yaml  4727_global_group_created.yaml  4728_member_added_to_global_group.yaml  4729_member_removed_from_global_group.yaml  4730_global_group_deleted.yaml  4731_local_group_created.yaml  4732_member_added_to_local_group.yaml  4733_member_removed_from_local_group.yaml  4735_local_group_changed.yaml  4737_global_group_changed.yaml  (+10 more)
docs/: admin-security.md
docs/superpowers/plans/: 2026-06-21-ghcr-release-pipeline.md  2026-06-21-ipfix-phase1-ingestion.md  2026-06-21-ipfix-phase2-s3sink.md  2026-06-21-ipfix-phase3-syslog-s3.md  2026-06-21-ipfix-phase4-ipfix-s3.md  2026-06-21-s3-followups.md  2026-06-22-zeek-ingestion.md  2026-06-23-generic-buffered-writer.md  2026-06-27-ingestion-formats-expansion.md
docs/superpowers/specs/: 2026-06-21-ghcr-release-pipeline-design.md  2026-06-21-ipfix-ingestion-and-s3-persistence-design.md  2026-06-21-syslog-ipfix-s3-persistence-options.md  2026-06-22-zeek-ingestion-design.md  2026-06-22-zeek-ingestion-options.md  2026-06-23-generic-buffered-writer-design.md  2026-06-27-ingestion-formats-expansion-design.md
scripts/: profile-server.sh  run-flamegraph.sh  run-with-profiling.sh  run_coverage.sh
src/: lib.rs  main.rs  shutdown.rs
src/admin/: auth.rs  config_api.rs  middleware.rs  mod.rs  routes.rs  state.rs
src/admin/templates/: admin.html
src/config/: mod.rs
src/forwarding/: buffered_writer.rs  generic_s3.rs  ipfix_s3.rs  mod.rs  parquet_s3.rs  s3_sink.rs  sflow_s3.rs  structured_syslog_s3.rs  suricata_s3.rs  syslog_s3.rs  zeek_s3.rs
src/ingest/: handlers.rs  mod.rs  parse.rs
src/ipfix/: decoder.rs  listener.rs  mod.rs
src/middleware/: mod.rs
src/models/: mod.rs
src/parser/: mod.rs  tests.rs
src/protocol/: mod.rs
src/server/: mod.rs  otlp.rs
src/sflow/: decoder.rs  listener.rs  mod.rs
src/stats/: mod.rs
src/suricata/: listener.rs  mod.rs  schema.rs
src/syslog/: listener.rs  mod.rs
src/syslog/payload/: auditd.rs  cef.rs  dhcp.rs  leef.rs  mod.rs  radius.rs  web_access.rs
src/zeek/: listener.rs  mod.rs  schema.rs
tests/: hec_e2e.rs  hec_s3_integration.rs  ipfix_s3_integration.rs  otlp_e2e.rs  otlp_feature_smoke.rs  otlp_s3_integration.rs  sflow_s3_integration.rs  suricata_s3_integration.rs  syslog_payload_e2e.rs  syslog_s3_integration.rs  syslog_structured_s3_integration.rs  wef_s3_integration.rs  zeek_s3_integration.rs
tests/e2e/: Dockerfile.kerberos  docker-compose.yml  run.sh
tests/e2e/certs/: ca.crt  ca.key  client.crt  client.key  generate-certs.sh  server.crt  server.key  server.pem
tests/e2e/config/: wef-server-tls.toml  wef-server.toml
tests/e2e/kerberos-test/: Dockerfile  entrypoint.py
tests/e2e/parsing-validator/: Dockerfile  README.md  entrypoint.py
tests/e2e/real-ad-environment/: README.md  ludus-range-config.yml  run-real-ad-tests.py
tests/e2e/real-ad-environment/ansible/: configure-wef-client.yml  configure-wef-server.yml
tests/e2e/real-ad-environment/scripts/: test_phase1_connectivity.py  test_phase2_events.py  test_phase3_performance.py  validate_metrics.py
tests/e2e/s3-verifier/: Dockerfile
tests/e2e/simulation-environment/: Dockerfile.kerberos  docker-compose.yml  run.sh
tests/e2e/simulation-environment/certs/: ca.crt  ca.key  client.crt  client.key  generate-certs.sh  server.crt  server.key  server.pem
tests/e2e/simulation-environment/config/: logthing-10k-sustained.toml  logthing-kerberos.toml  logthing-tls.toml  logthing.toml  wef-server-10k-sustained.toml
tests/e2e/simulation-environment/ipfix-generator/: Dockerfile  entrypoint.py
tests/e2e/simulation-environment/ipfix-s3-verifier/: Dockerfile  entrypoint.py
tests/e2e/syslog-generator/: entrypoint.py
tests/e2e/tls-test/: Dockerfile  entrypoint.py
tests/e2e/wef-generator/: Dockerfile  entrypoint.py
(+23 files in other folders)
